--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -24,7 +24,7 @@
     </div>
     <nav class="nav-bar">
 
-        <a href="#">
+        <a href="/product/list">
             <div class="nav-bar-button">
                 <p>Productos</p>
             </div>
