--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -60,9 +60,7 @@
         </section>
         <section class="container-description">
             <h3 class="titulo_descripcion_prod">Descripción el Producto</h3>
-            <p class="prod-description">La laptop HP 245 sigue el ritmo de estilos de trabajo móviles gracias a un
-                diseño delgado y ligero. La hermosa pantalla con su angosto borde y relación de pantalla y cuerpo grande
-                brinda amplio espacio para trabajar o reproducir contenido.</p>
+            <p class="prod-description"><%= producto.descripcionDetallada %> </p>
 
         </section>
         <section class="product-atributes">
