--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -48,7 +48,7 @@
                             <div class="container-top">
                                 <img src=<%="/img/" +producto.img %> alt="producto">
                                 <div class="productInfo">
-                                    <a href="/productDetail" class="productName">
+                                    <a href="/product/detail/<%= producto.id %> " class="productName">
                                         <%= producto.titulo %>
                                     </a>
                                     <p class="final-value">
