--- a/src/views/productEdit.ejs
+++ b/src/views/productEdit.ejs
@@ -18,7 +18,7 @@
         <!--  HEADER -->
 
         <main>
-            <form action="/" method="get">
+            <form action="/administrar/edit/<%= producto.id %> " method="get">
                 <div class="caja-padre">
                     <div class="añadir-producto">
                         <h2>Estás editando el producto <%= producto.id %> </h2>
