--- a/src/views/productList.ejs
+++ b/src/views/productList.ejs
@@ -27,7 +27,7 @@
             </div>
             <img src="/img/banner2.jpg" alt="banner"> -->
 
-        </div> -->
+        </div>
         <main>
 
             <section class="Category">
