--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -274,6 +274,28 @@ main {
     border-bottom: 1px solid #4A4A4A;
 }
 
+.Category a {
+    text-decoration: none;
+    color: #cac7ff;
+}
+
+.add-button {
+    background-color: #4A4A4A;
+    padding: 10px;
+    width: 120px;
+    text-align: center;
+    margin: 5px 0;
+    border-radius: 15px;
+    transition: all 400ms ease;
+}
+
+.add-button:hover{
+    background-color: #7EFF00;
+    color: #4A4A4A;
+}
+
+
+
 .products article {
     position:relative;
     margin: 5px;
@@ -298,7 +320,8 @@ main {
 
 .final-value {
     font-size: 16px;
-    color: #7EFF00
+    color: #7EFF00;
+    margin-top:10px
 }
 
 .discount{
@@ -314,6 +337,7 @@ main {
     font-size: 14px;
     color: #cac7ff;
     font-weight: bold;
+    margin: 10px 0;
 }
 .productName:hover{
     color:#7EFF00
@@ -338,9 +362,30 @@ main {
 .edit-button-container{
     text-align: center;
     position:absolute;
+    background-color: #4c9800;
+    padding: 3px;
+    border-radius: 5px;
     top:10px;
     right:10px;
-    
+}
+
+.edit-button{
+    text-decoration: none;
+    color: #cac7ff;
+}
+
+
+.action-button-delete{
+    text-align: center;
+    position:absolute;
+    border:none;
+    color: #cac7ff;
+    background-color: darkred;
+    padding: 3px;
+    cursor:pointer;
+    border-radius: 5px;
+    top: 50px;
+    right:10px;
 }
 
 
