--- a/public/css/register.css
+++ b/public/css/register.css
@@ -265,12 +265,12 @@ form {
     display: none;
 }
 
-.caja-padre div input {
+.normal-input {
     background-color: #252323;
     color: #757272;
     font-size: 18px;
-    border: none;
     border-radius: 5px;
+    margin-top: 20px;
     height: 35px;
     width: 100%;
     max-width: 500px;
@@ -281,6 +281,18 @@ form {
 
 .caja-padre input:hover {
     box-shadow: 0px 0px 3px black;
+}
+
+.aclaracion-1{
+    font-size: 16px;
+    margin-top: 15px;
+    margin-bottom: -20px;
+}
+
+.aclaracion {
+    font-size: 16px;
+    margin-top: 15px;
+    margin-bottom: -5px;
 }
 
 form div {
@@ -301,6 +313,7 @@ form div {
     position: relative;
     display: inline-block;
     margin-bottom: 5px;
+    top: 10px;
 }
 
 .file-select::before {
@@ -363,6 +376,7 @@ form div button {
     width: 100%;
     height: 30px;
     background: #7EFF00;
+    margin-top: 10px;
     font-weight: bold;
     transition: all 0.2s;
     box-shadow: 0px 0px 5px #000;
@@ -381,6 +395,7 @@ form div button {
     width: 50%;
     height: 27px;
     background-color: #7EFF00;
+    margin-top: 5px;
     font-weight: bold;
     transition: all 0.2s;
     box-shadow: 0px 0px 5px #000;
@@ -467,6 +482,34 @@ form div button {
     font-weight: bold;
 
 }
+
+/* ESTILOS VALIDACIONES */
+
+.invalido{
+    border: solid 1px #FF4949;
+}
+
+.mensaje-de-error {
+    color: #FF4949;
+    margin-top: -15px;
+    position: absolute;
+    
+}
+
+.mensaje-de-error i {
+    padding: 5px;
+}
+
+.mensaje-de-errorImg{
+    color: #FF4949;
+    margin-bottom: -20px;
+}
+
+.mensaje-de-errorImg i {
+    padding: 5px;
+}
+
+
 /* FOOTER */
 
 footer {
@@ -571,8 +614,12 @@ footer {
         justify-content: space-between;
     }
 
+    .aclaracion-1 {
+        font-size: 16px;
+    }
+
     .aclaracion {
-        font-size: 12px;
+        font-size: 16px;
     }
     
     .lista1 h4 {
@@ -706,7 +753,8 @@ footer {
 
     .file-select {
         display: flex;
-        left: 100px;
+        left: 250px;
+        top: 10px;
         width: 150px;
         margin-bottom: 5px;
         height: 40px;
