--- a/public/css/register.css
+++ b/public/css/register.css
@@ -267,7 +267,7 @@ form {
 
 .normal-input {
     background-color: #252323;
-    color: #757272;
+    color: whitesmoke;
     font-size: 18px;
     border-radius: 5px;
     margin-top: 20px;
