--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -60,7 +60,7 @@
                         <% } %> 
 
                     <div>
-                        <input type="text" name="username" placeholder="Nombre de usuario" class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%> " 
+                        <input type="text" name="username" placeholder="Nombre de usuario" class = "normal-input  <%= locals.errors && errors.username ? 'invalido' : null%> " 
                         value="<%= locals.oldData ? oldData.username : null %>">
                     </div>
                     <% if (locals.errors && errors.username) { %>
@@ -71,7 +71,7 @@
                         <% } %>
 
                     <div>
-                        <input type="email" name="email" placeholder="E-mail" id="email" class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%> " 
+                        <input type="email" name="email" placeholder="E-mail" id="email" class = "normal-input  <%= locals.errors && errors.email ? 'invalido' : null%> " 
                         value="<%= locals.oldData ? oldData.email : null %>" >
                     </div>
                     <% if (locals.errors && errors.email) { %>
@@ -87,7 +87,7 @@
                     </div>
 
                     <div>
-                        <input type="text" name="address" placeholder="Domicilio" class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%> " 
+                        <input type="text" name="address" placeholder="Domicilio" class = "normal-input  <%= locals.errors && errors.address ? 'invalido' : null%> " 
                         value="<%= locals.oldData ? oldData.address : null %>">
                     </div>
                     <% if (locals.errors && errors.address) { %>
@@ -109,7 +109,7 @@
                             <% } %> 
 
                         <div class="contraseña">
-                            <input type="password" name="password" placeholder="Contraseña" class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%>" >
+                            <input type="password" name="password" placeholder="Contraseña" class = "normal-input  <%= locals.errors && errors.password? 'invalido' : null%>" >
                         </div>
                         <% if (locals.errors && errors.password) { %>
                             <div class="mensaje-de-error">
@@ -120,7 +120,7 @@
 
                         <div class="contraseña">
                             <input type="password" name="passwordConfirm"
-                                placeholder="Confirmar contraseña" class = "normal-input  <%= locals.errors && errors.fullName ? 'invalido' : null%>" >
+                                placeholder="Confirmar contraseña" class = "normal-input  <%= locals.errors && errors.passwordConfirm ? 'invalido' : null%>" >
                         </div>
                         <% if (locals.errors && errors.passwordConfirm) { %>
                             <div class="mensaje-de-error">
