--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -28,17 +28,22 @@
                     <form action="/user/login" method="POST" class="form-login">
                         <h5>Iniciar sesión con mi email</h5>
                         <!--<input class="cajita" type="checkbox" name="" value="">  -->
-                        <input class="controls" type="text" style="color: rgb(255, 255, 255) ;" name="username" value=""
-                            placeholder="Usuario" required minlength="3">
+                        <input class="controls <%= locals.errors && errors.username ? 'invalido' : null%> "  type="text"  name="username" value="<%= locals.oldData ? oldData.username : null %>"
+                            placeholder="Usuario" >
                             <% if (locals.errors && errors.username) { %>
                                 <div class="mensaje-de-error">
-                                    <%= errors.username.msg %> 
+                                    <i class="fas fa-exclamation-triangle"></i><%= errors.username.msg %> 
                                 </div> 
                                 <% } %> 
-                        <input class="controls" type="password" style="color: rgb(255, 255, 255);" name="password"
-                            value="" placeholder="Contraseña" autocomplete="current-password" required minlength="3">
+                        <input class="controls <%= locals.errors && errors.password ? 'invalido' : null%> " type="password"  name="password"
+                            value="" placeholder="Contraseña" autocomplete="current-password" >
+                            <% if (locals.errors && errors.password) { %>
+                                <div class="mensaje-de-error">
+                                    <i class="fas fa-exclamation-triangle"></i><%= errors.password.msg %> 
+                                </div> 
+                                <% } %> 
                         <div class="texto-login">
-                            <a class="registrarme" ; padding: 6px;; href="/register"> Registrame</a>
+                            <a class="registrarme" ; padding: 6px;; href="/user/register"> Registrame</a>
                             <a class="contraseña" ; href="#"> ¿Olvidaste tu Contraseña?</a>
                         </div>
                         <div class="button-container">
